--- a/Server/UI/package.json
+++ b/Server/UI/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^2.8.0",
     "classnames": "^2.2.6",
     "core-js": "^3.1.4",
+    "daypilot-pro-react": "https://npm.daypilot.org/daypilot-pro-react/trial/2018.2.3297.tar.gz",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "flag-icon-css": "^3.3.0",
@@ -29,8 +30,10 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-app-polyfill": "^1.0.1",
+    "react-available-times": "^1.4.0",
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
+    "react-google-calendar-api": "^1.0.11",
     "react-router-config": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-test-renderer": "^16.8.6",
