--- a/Server/package.json
+++ b/Server/package.json
@@ -10,7 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/firestore": "^3.8.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "firebase-admin": "^8.12.1"
+    "firebase-admin": "^8.12.1",
+    "googleapis": "^39.2.0",
+    "react-calendar": "^3.1.0"
   }
 }
