--- a/Server/UI/package.json
+++ b/Server/UI/package.json
@@ -16,6 +16,8 @@
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
     "@coreui/icons": "0.3.0",
     "@coreui/react": "^2.5.1",
+    "@google-cloud/storage": "^5.1.1",
+    "@material-ui/core": "^4.10.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
@@ -24,8 +26,11 @@
     "daypilot-pro-react": "https://npm.daypilot.org/daypilot-pro-react/trial/2018.2.3297.tar.gz",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
+    "firebase": "^7.15.4",
+    "firebase-admin": "^8.12.1",
     "flag-icon-css": "^3.3.0",
     "font-awesome": "^4.7.0",
+    "http2": "^3.3.7",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
@@ -33,6 +38,7 @@
     "react-available-times": "^1.4.0",
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
+    "react-fitted-image": "^1.0.1",
     "react-google-calendar-api": "^1.0.11",
     "react-router-config": "^5.0.1",
     "react-router-dom": "^5.0.1",
