--- a/Server/package.json
+++ b/Server/package.json
@@ -13,8 +13,10 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-react-views": "^0.11.0",
+    "firebase": "^7.15.4",
     "firebase-admin": "^8.12.1",
     "googleapis": "^39.2.0",
+    "multer": "^1.4.2",
     "react": "^16.13.1",
     "react-calendar": "^3.1.0",
     "socket.io": "^2.3.0"
