--- a/Server/UI/package.json
+++ b/Server/UI/package.json
@@ -16,6 +16,7 @@
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
     "@coreui/icons": "0.3.0",
     "@coreui/react": "^2.5.1",
+    "@daypilot/modal": "^3.1.2",
     "@google-cloud/storage": "^5.1.1",
     "@material-ui/core": "^4.10.2",
     "axios": "^0.19.2",
