--- a/Server/UI/package.json
+++ b/Server/UI/package.json
@@ -16,14 +16,19 @@
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
     "@coreui/icons": "0.3.0",
     "@coreui/react": "^2.5.1",
+    "@date-io/date-fns": "^2.6.2",
     "@daypilot/modal": "^3.1.2",
     "@google-cloud/storage": "^5.1.1",
     "@material-ui/core": "^4.10.2",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/pickers": "^3.2.10",
     "axios": "^0.19.2",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "classnames": "^2.2.6",
     "core-js": "^3.1.4",
+    "date-fns": "^2.14.0",
     "daypilot-pro-react": "https://npm.daypilot.org/daypilot-pro-react/trial/2019.3.4012.tar.gz",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
@@ -38,10 +43,12 @@
     "react-app-polyfill": "^1.0.1",
     "react-available-times": "^1.4.0",
     "react-chartjs-2": "^2.7.6",
+    "react-datetime-picker": "^3.0.2",
     "react-dom": "^16.8.6",
     "react-fitted-image": "^1.0.1",
     "react-google-calendar-api": "^1.0.11",
     "react-redux": "^7.2.0",
+    "react-router": "^3.2.6",
     "react-router-config": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-test-renderer": "^16.8.6",
