--- a/Server/package.json
+++ b/Server/package.json
@@ -16,9 +16,11 @@
     "firebase": "^7.15.4",
     "firebase-admin": "^8.12.1",
     "googleapis": "^39.2.0",
+    "moment": "^2.27.0",
     "multer": "^1.4.2",
     "react": "^16.13.1",
     "react-calendar": "^3.1.0",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "timestamp-date": "^1.1.7"
   }
 }
