--- a/Server/UI/package.json
+++ b/Server/UI/package.json
@@ -24,7 +24,7 @@
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
     "axios": "^0.19.2",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.5.2",
     "chart.js": "^2.8.0",
     "classnames": "^2.2.6",
     "core-js": "^3.1.4",
@@ -42,7 +42,10 @@
     "react": "^16.8.6",
     "react-app-polyfill": "^1.0.1",
     "react-available-times": "^1.4.0",
+    "react-bootstrap": "^1.3.0",
     "react-chartjs-2": "^2.7.6",
+    "react-circular-progressbar": "^2.0.3",
+    "react-confirm-alert": "^2.6.1",
     "react-datetime-picker": "^3.0.2",
     "react-dom": "^16.8.6",
     "react-fitted-image": "^1.0.1",
