--- a/Server/UI/package.json
+++ b/Server/UI/package.json
@@ -58,6 +58,7 @@
     "react-router-config": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-shave": "^1.0.1",
+    "react-spinners": "^0.9.0",
     "react-test-renderer": "^16.8.6",
     "reactstrap": "^8.0.0",
     "redux": "^4.0.5",
