--- a/Server/UI/package.json
+++ b/Server/UI/package.json
@@ -42,6 +42,7 @@
     "react": "^16.8.6",
     "react-app-polyfill": "^1.0.1",
     "react-available-times": "^1.4.0",
+    "react-awesome-modal": "^2.0.5",
     "react-chartjs-2": "^2.7.6",
     "react-datetime-picker": "^3.0.2",
     "react-dom": "^16.8.6",
