--- a/Server/UI/package.json
+++ b/Server/UI/package.json
@@ -12,46 +12,47 @@
     "url": "git@github.com:coreui/coreui-free-react-admin-template.git"
   },
   "dependencies": {
-    "@coreui/coreui": "^2.1.12",
+    "@coreui/coreui": "^2.1.16",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
     "@coreui/icons": "0.3.0",
-    "@coreui/react": "^2.5.1",
-    "@daypilot/modal": "^3.1.2",
-    "@google-cloud/storage": "^5.1.1",
-    "@material-ui/core": "^4.10.2",
+    "@coreui/react": "^2.5.8",
+    "@daypilot/modal": "^3.4.2",
+    "@google-cloud/storage": "^5.1.2",
+    "@material-ui/core": "^4.11.0",
     "axios": "^0.19.2",
-    "bootstrap": "^4.3.1",
-    "chart.js": "^2.8.0",
+    "bootstrap": "^4.5.0",
+    "chart.js": "^2.9.3",
     "classnames": "^2.2.6",
-    "core-js": "^3.1.4",
+    "core-js": "^3.6.5",
     "daypilot-pro-react": "https://npm.daypilot.org/daypilot-pro-react/trial/2019.3.4012.tar.gz",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "firebase": "^7.15.4",
-    "firebase-admin": "^8.12.1",
-    "flag-icon-css": "^3.3.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "firebase": "^7.16.1",
+    "firebase-admin": "^8.13.0",
+    "flag-icon-css": "^3.5.0",
     "font-awesome": "^4.7.0",
     "http2": "^3.3.7",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-app-polyfill": "^1.0.1",
+    "react": "^16.13.1",
+    "react-app-polyfill": "^1.0.6",
     "react-available-times": "^1.4.0",
-    "react-chartjs-2": "^2.7.6",
-    "react-dom": "^16.8.6",
+    "react-calendar": "^3.1.0",
+    "react-chartjs-2": "^2.9.0",
+    "react-dom": "^16.13.1",
     "react-fitted-image": "^1.0.1",
     "react-google-calendar-api": "^1.0.11",
     "react-redux": "^7.2.0",
-    "react-router-config": "^5.0.1",
-    "react-router-dom": "^5.0.1",
-    "react-test-renderer": "^16.8.6",
-    "reactstrap": "^8.0.0",
+    "react-router-config": "^5.1.1",
+    "react-router-dom": "^5.2.0",
+    "react-test-renderer": "^16.13.1",
+    "reactstrap": "^8.5.1",
     "redux": "^4.0.5",
     "simple-line-icons": "^2.4.1",
     "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
-    "react-scripts": "^3.0.1"
+    "react-scripts": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
