--- a/Server/Admin/package.json
+++ b/Server/Admin/package.json
@@ -27,6 +27,7 @@
     "flag-icon-css": "^3.3.0",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.20",
+    "moment": "^2.29.0",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
@@ -42,7 +43,7 @@
     "victory": "^35.1.0"
   },
   "devDependencies": {
-    "react-scripts": "^3.4.3"
+    "react-scripts": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
