--- a/Server/Admin/package.json
+++ b/Server/Admin/package.json
@@ -26,6 +26,7 @@
     "firebase": "^7.21.1",
     "flag-icon-css": "^3.3.0",
     "font-awesome": "^4.7.0",
+    "geopoint": "^1.0.1",
     "lodash": "^4.17.20",
     "moment": "^2.29.0",
     "node-sass": "^4.12.0",
