--- a/Server/UI/package.json
+++ b/Server/UI/package.json
@@ -18,6 +18,7 @@
     "@coreui/react": "^2.5.1",
     "@date-io/date-fns": "^2.6.2",
     "@daypilot/modal": "^3.1.2",
+    "@emotion/core": "^10.0.35",
     "@google-cloud/storage": "^5.1.1",
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
@@ -45,7 +46,6 @@
     "react-available-times": "^1.4.0",
     "react-awesome-modal": "^2.0.5",
     "react-bootstrap": "^1.3.0",
-
     "react-chartjs-2": "^2.7.6",
     "react-chat-window": "^1.2.1",
     "react-circular-progressbar": "^2.0.3",
