--- a/Server/UI/package.json
+++ b/Server/UI/package.json
@@ -54,6 +54,7 @@
     "react-fitted-image": "^1.0.1",
     "react-google-calendar-api": "^1.0.11",
     "react-message-box": "^1.0.6",
+    "react-rating-scale": "^1.1.2",
     "react-redux": "^7.2.0",
     "react-router": "^3.2.6",
     "react-router-config": "^5.0.1",
