--- a/Server/UI/package.json
+++ b/Server/UI/package.json
@@ -34,11 +34,13 @@
     "daypilot-pro-react": "https://npm.daypilot.org/daypilot-pro-react/trial/2019.3.4012.tar.gz",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
+    "esm": "^3.2.25",
     "firebase": "^7.15.4",
     "firebase-admin": "^8.12.1",
     "flag-icon-css": "^3.3.0",
     "font-awesome": "^4.7.0",
     "http2": "^3.3.7",
+    "latlon-geohash": "^2.0.0",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
