--- a/Server/package.json
+++ b/Server/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@google-cloud/firestore": "^3.8.0",
     "cors": "^2.8.5",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "express-react-views": "^0.11.0",
     "firebase": "^7.15.4",
     "firebase-admin": "^8.12.1",
     "googleapis": "^39.2.0",
+    "latlon-geohash": "^2.0.0",
     "moment": "^2.27.0",
     "multer": "^1.4.2",
     "react": "^16.13.1",
