--- a/Server/package.json
+++ b/Server/package.json
@@ -18,6 +18,7 @@
     "firebase-admin": "^8.12.1",
     "googleapis": "^39.2.0",
     "latlon-geohash": "^2.0.0",
+    "loopback-datatype-geopoint": "^1.0.0",
     "moment": "^2.27.0",
     "multer": "^1.4.2",
     "react": "^16.13.1",
